# claude-server

./: .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  IDEAS.md  INTERPRETER.md  Makefile  README.md  build.rs  system_prompt.txt
.cargo/: config.toml
scripts/: diff-requests.py
src/: agent_loop.rs  api_client.rs  chat.html  chat.rs  child_agent.rs  compaction.rs  config.rs  core_loop.rs  dashboard.html  db.rs  docs.rs  feedback.rs  http_server.rs  main.rs  model_capabilities.rs  process.rs  python.rs  renderer.rs  source_dump.rs  tls.rs  types.rs  webhook_proxy.rs
src/bridges/: agentchat.rs  discord.rs  email.rs  mod.rs  signal.rs  slack.rs  stdio.rs  telegram.rs
src/watchers/: fs.rs  imap.rs  mod.rs  mqtt.rs
