[package]
name = "claude-server"
version = "0.3.0"
edition = "2021"

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "3f92c3ad1c5042e2694386e57335b3dbb02c3cde", default-features = false, features = ["threading", "stdlib", "freeze-stdlib", "importlib"] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "3f92c3ad1c5042e2694386e57335b3dbb02c3cde" }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "rustls-tls-native-roots"] }
rand = "0.8"
rustls-native-certs = "0.8"
clap = { version = "4", features = ["derive", "env"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
notify = "6"
rumqttc = "0.24"
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
mailparse = "0.15"
# Force liblzma to build from bundled source — feature unification drops the
# homebrew dylib dep. (libffi can't be dropped: rustpython-stdlib at rev
# 3f92c3a has an unconditional libffi dep; would require forking RustPython.)
liblzma-sys = { version = "0.4", features = ["static"] }
